--- a/eng/build.yml
+++ b/eng/build.yml
@@ -48,6 +48,7 @@ jobs:
                     /p:DotNetSymbolServerTokenMsdl=$(microsoft-symbol-server-pat)
                     /p:DotNetSymbolServerTokenSymWeb=$(symweb-symbol-server-pat)
                     /p:PB_PublishType=$(_PublishType)
+                    /p:DotNetPublishUsingPipelines=true
         - _SignArgs: /p:DotNetSignType=$(_SignType) /p:TeamName=$(_TeamName)
         - _PerfIterations: 25
     steps:
