Passing /p:DotNetPublishUsingPipelines=true to the CIBuild.cmd
This will cause the right steps to happen during the publishing stages of the definition.

--- a/.vsts-dotnet.yml
+++ b/.vsts-dotnet.yml
@@ -81,6 +81,7 @@ stages:
                 /p:DotNetSymbolServerTokenMsdl=$(microsoft-symbol-server-pat)
                 /p:DotNetSymbolServerTokenSymWeb=$(symweb-symbol-server-pat)
                 /p:TeamName=MSBuild
+                /p:DotNetPublishUsingPipelines=true
       displayName: Build
       condition: succeeded()
 
