Adding a couple of needed variables for channel validation

--- a/.vsts-dotnet.yml
+++ b/.vsts-dotnet.yml
@@ -33,6 +33,10 @@ stages:
       value: 'int.master'
     - name: VisualStudio.DropName
       value: Products/$(System.TeamProject)/$(Build.Repository.Name)/$(Build.SourceBranchName)/$(Build.BuildNumber)
+    - name: _DotNetArtifactsCategory
+      value: .NETCore
+    - name: _DotNetValidationArtifactsCategory
+      value: .NETCoreValidation
 
     steps:
     - task: NuGetToolInstaller@0
