--- a/src/Tasks/Microsoft.NET.Build.Tasks/targets/Microsoft.NET.RuntimeIdentifierInference.targets
+++ b/src/Tasks/Microsoft.NET.Build.Tasks/targets/Microsoft.NET.RuntimeIdentifierInference.targets
@@ -185,7 +185,7 @@ Copyright (c) .NET Foundation. All rights reserved.
                      '$(_UsingDefaultRuntimeIdentifier)' == 'true'">
 
     <ItemGroup>
-      <_ReferencedPlatformPackage Include="@(PackagesReferenced)" Condition="'%(Identity)' == 'Microsoft.NETCore.Platforms'" />
+      <_PlatformPackageDependency Include="@(PackageDependencies)" Condition="'%(Identity)' == 'Microsoft.NETCore.Platforms'" />
     </ItemGroup>
     
     <!-- If there were no native assets, or if the Microsoft.NETCore.Platforms package was not referenced, then revert to AnyCPU.
@@ -194,7 +194,7 @@ Copyright (c) .NET Foundation. All rights reserved.
          be picked up unless the platforms package was referenced. -->
     
     <PropertyGroup Condition="('@(NativeCopyLocalItems)' == '' or
-                             '@(_ReferencedPlatformPackage)' == '')">
+                             '@(_PlatformPackageDependency)' == '')">
       <PlatformTarget>AnyCPU</PlatformTarget>
     </PropertyGroup>
   </Target>
