--- a/src/Tasks/Microsoft.NET.Build.Tasks/targets/Microsoft.NET.RuntimeIdentifierInference.targets
+++ b/src/Tasks/Microsoft.NET.Build.Tasks/targets/Microsoft.NET.RuntimeIdentifierInference.targets
@@ -174,6 +174,10 @@ Copyright (c) .NET Foundation. All rights reserved.
     <OutputPath>$(OutputPath)$(RuntimeIdentifier)\</OutputPath>
   </PropertyGroup>
 
+  <UsingTask TaskName="Microsoft.NET.Build.Tasks.GetDefaultPlatformTargetForNetFramework"
+           AssemblyFile="$(MicrosoftNETBuildTasksAssembly)" />
+
+
   <!-- 
     Switch our default .NETFramework CPU architecture choice back to AnyCPU before 
     compiling the exe if no copy-local native dependencies were resolved from NuGet 
@@ -184,19 +188,12 @@ Copyright (c) .NET Foundation. All rights reserved.
           Condition="'$(_UsingDefaultPlatformTarget)' == 'true' and
                      '$(_UsingDefaultRuntimeIdentifier)' == 'true'">
 
-    <ItemGroup>
-      <_PlatformPackageDependency Include="@(PackageDependencies)" Condition="'%(Identity)' == 'Microsoft.NETCore.Platforms'" />
-    </ItemGroup>
-    
-    <!-- If there were no native assets, or if the Microsoft.NETCore.Platforms package was not referenced, then revert to AnyCPU.
-         The reason we use AnyCPU if Microsoft.NETCore.Platforms is not referenced is to preserve behavior from before 3.0 when
-         the RuntimeIdentifier graph wasn't included in the SDK, and assets where the RuntimeIdentifier didn't match exactly wouldn't
-         be picked up unless the platforms package was referenced. -->
-    
-    <PropertyGroup Condition="('@(NativeCopyLocalItems)' == '' or
-                             '@(_PlatformPackageDependency)' == '')">
-      <PlatformTarget>AnyCPU</PlatformTarget>
-    </PropertyGroup>
+    <GetDefaultPlatformTargetForNetFramework PackageDependencies="@(PackageDependencies)"
+                                             NativeCopyLocalItems="@(NativeCopyLocalItems)">
+
+      <Output TaskParameter="DefaultPlatformTarget" PropertyName="PlatformTarget" />
+      
+    </GetDefaultPlatformTargetForNetFramework>
   </Target>
 
 </Project>
