Opting into dependentupon convention (#3533)
* Opting into dependentupon convention

* Condition based on core 3.0 and framework 2.1

* Created test for dependentupon

Note: This test fails without its MSBuild counterpart. I verified that this test ran successfully on a local machine with a version of MSBuild that had the needed change. Until that change is merged in, this test will skip & refer to the original issue.

* Fixed framework identifier

* Removed logging from test

Co-Authored-By: Rainer Sigwald <raines@microsoft.com>

--- a/src/Tasks/Microsoft.NET.Build.Tasks/targets/Microsoft.NET.Sdk.targets
+++ b/src/Tasks/Microsoft.NET.Build.Tasks/targets/Microsoft.NET.Sdk.targets
@@ -96,6 +96,13 @@ Copyright (c) .NET Foundation. All rights reserved.
   </PropertyGroup>
 
   <PropertyGroup>
+    <EmbeddedResourceUseDependentUponConvention 
+      Condition="'$(EmbeddedResourceUseDependentUponConvention)' == '' and
+                 (('$(TargetFrameworkIdentifier)' == '.NETCoreApp' and '$(_TargetFrameworkVersionWithoutV)' >= '3.0') or
+                  ('$(TargetFrameworkIdentifier)' == '.NETStandard' and '$(_TargetFrameworkVersionWithoutV)' >= '2.1'))">true</EmbeddedResourceUseDependentUponConvention>
+  </PropertyGroup>
+
+  <PropertyGroup>
     <CoreBuildDependsOn>
       _CheckForBuildWithNoBuild;
       $(CoreBuildDependsOn);
