Updating MicroBuilds's swix plugin to a version that supports ngenApplications.

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -79,5 +79,7 @@
     <DefaultItemExcludes>$(DefaultItemExcludes);*.binlog</DefaultItemExcludes>
 
     <DisableImplicitNuGetFallbackFolder>true</DisableImplicitNuGetFallbackFolder>
+
+    <MicroBuildPluginsSwixBuildVersion>1.0.670</MicroBuildPluginsSwixBuildVersion>
   </PropertyGroup>
 </Project>
