--- a/src/redist/redist.csproj
+++ b/src/redist/redist.csproj
@@ -34,8 +34,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\tool_msbuild\tool_msbuild.csproj" />
-    <ProjectReference Include="..\tool_cli\tool_cli.csproj" />
     <ProjectReference Include="..\tool_nuget\tool_nuget.csproj" />
+    <ProjectReference Include="..\dotnet\dotnet.csproj" />
   </ItemGroup>
 
   <ItemGroup>
