--- a/eng/Versions.props
+++ b/eng/Versions.props
@@ -21,6 +21,7 @@
     <DotNetUseShippingVersions>true</DotNetUseShippingVersions>
     <!-- Workaround for https://github.com/dotnet/roslyn/issues/35793 -->
     <SemanticVersioningV1>true</SemanticVersioningV1>
+    <MicroBuildPluginsSwixBuildVersion>1.0.672</MicroBuildPluginsSwixBuildVersion>
   </PropertyGroup>
   <!-- Repo Toolset Features -->
   <PropertyGroup>
