--- a/test/Microsoft.DotNet.Tools.Tests.Utilities.Tests/Microsoft.DotNet.Tools.Tests.Utilities.Tests.csproj
+++ b/test/Microsoft.DotNet.Tools.Tests.Utilities.Tests/Microsoft.DotNet.Tools.Tests.Utilities.Tests.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <TargetFramework>$(CliTargetFramework)</TargetFramework>
+    <TargetFramework>$(ToolsetTargetFramework)</TargetFramework>
     <StrongNameKeyId>MicrosoftAspNetCore</StrongNameKeyId>
     <SignAssembly>true</SignAssembly>
     <PublicSign Condition=" '$(OS)' != 'Windows_NT' ">true</PublicSign>
