--- a/TestAssets/TestPackages/dotnet-fallbackfoldertool/dotnet-fallbackfoldertool.csproj
+++ b/TestAssets/TestPackages/dotnet-fallbackfoldertool/dotnet-fallbackfoldertool.csproj
@@ -7,6 +7,7 @@
     <AssemblyName>dotnet-fallbackfoldertool</AssemblyName>
     <OutputType>Exe</OutputType>
     <VersionSuffix></VersionSuffix>
+    <IsPackable>true</IsPackable>
   </PropertyGroup>
   
 </Project>
