Revert "Hard code RepositoryName=Microsoft/msbuild (#4719)"
This reverts commit 72542aa2797e714fef689ebd6c939dd72c4e3770.

--- a/.vsts-dotnet.yml
+++ b/.vsts-dotnet.yml
@@ -76,7 +76,7 @@ stages:
                 -configuration $(BuildConfiguration)
                 -officialBuildId $(Build.BuildNumber)
                 -officialSkipApplyOptimizationData $(SkipApplyOptimizationData)
-                /p:RepositoryName=Microsoft/msbuild
+                /p:RepositoryName=$(Build.Repository.Name)
                 /p:VisualStudioIbcSourceBranchName=$(IbcSourceBranchName)
                 /p:VisualStudioDropAccessToken=$(System.AccessToken)
                 /p:VisualStudioDropName=$(VisualStudio.DropName)
