Block and tests for C++/CLI support (#3634)
Block publishing in single C++ and building exe

Better error message for Pack failure

Block for EnableComHosting

--- a/src/Tasks/Microsoft.NET.Build.Tasks/targets/Microsoft.NET.Publish.targets
+++ b/src/Tasks/Microsoft.NET.Build.Tasks/targets/Microsoft.NET.Publish.targets
@@ -1004,4 +1004,18 @@ Copyright (c) .NET Foundation. All rights reserved.
     -->
   <Target Name="RunResolvePublishAssemblies" />
 
+  <!--
+    ============================================================
+    _CheckForLanguageAndPublishFeatureCombinationSupport
+    
+    Block unsupported language and feature combination.
+    ============================================================
+    -->
+  <Target Name="_CheckForLanguageAndPublishFeatureCombinationSupport"
+        BeforeTargets="Publish;PrepareForPublish">
+
+    <NETSdkError Condition="'$(Language)' == 'C++' and '$(TargetFrameworkIdentifier)' == '.NETCoreApp'"
+                 ResourceName="NoSupportCppPublishDotnetCore" />
+
+  </Target>
 </Project>
